--- a/AbsenzAPPDBHosting/Views/Shared/_Layout.cshtml
+++ b/AbsenzAPPDBHosting/Views/Shared/_Layout.cshtml
@@ -23,6 +23,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Absenzens" asp-action="Index">Absenz eintragen</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Schuler" asp-action="Index">Schüler Übersicht</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
