--- a/AbsenzAPPDBHosting/Views/SchulerAbsenzUbersicht/GesamtUbersicht.cshtml
+++ b/AbsenzAPPDBHosting/Views/SchulerAbsenzUbersicht/GesamtUbersicht.cshtml
@@ -1,66 +1,6 @@
-﻿@model IEnumerable<AbsenzAPPDBHosting.Models.Absenzen>
-
-@{
-    ViewData["Title"] = "GesamtUbersicht";
-}
-
-<h1>Absenzen: @Html.DisplayNameFor(model => model.Schueler)</h1>
-
+﻿@using AbsenzAPPDBHosting.Views.Shared.RazorPages
+@addTagHelper *, Microsoft.AspNetCore.Components.Web
 
 <div>
-    <div style="width: 50%; border-style: solid;">
-
-    </div>
-    <div style="width: 50%; border-style: solid;">
-    </div>
+    <component type="typeof(AbsenzAPPDBHosting.Views.Shared.RazorPages.Schuleransicht)" render-mode="Static" />
 </div>
-
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Schueler)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Datum)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Absenzgrund)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Lehrer)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Modul)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Schueler)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Datum)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Absenzgrund)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Lehrer)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Modul)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
