Import Blazor + Beginn Schuler Site

--- a/AbsenzAPPDBHosting/Views/SchulerAbsenzUbersicht/GesamtUbersicht.cshtml
+++ b/AbsenzAPPDBHosting/Views/SchulerAbsenzUbersicht/GesamtUbersicht.cshtml
@@ -2,5 +2,5 @@
 @addTagHelper *, Microsoft.AspNetCore.Components.Web
 
 <div>
-    <component type="typeof(AbsenzAPPDBHosting.Views.Shared.RazorPages.Schuleransicht)" render-mode="Static" />
+    <component type="typeof(Schuleransicht)" render-mode="Static" />
 </div>
