--- a/AbsenzAPPDBHosting/Views/Shared/RazorPages/Schuleransicht.razor
+++ b/AbsenzAPPDBHosting/Views/Shared/RazorPages/Schuleransicht.razor
@@ -1,14 +1,21 @@
 ﻿@using AbsenzAPPDBHosting.BusinessLogic2
+@using AbsenzAPPDBHosting.Models
 @using AbsenzAPPDBHosting.Models.SchulerAbsenzUbersicht
 @namespace AbsenzAPPDBHosting.Views.Shared.RazorPages
-
+@inject SchulerLogic _schulerLogic;
 
 
 <h2>Schüleransicht</h2>
 
 <div class="row">
 	<div class="col-6">
-		<p>@_xxx.Name</p>
+		@if(_schulerliste != null)
+		{
+			foreach (Schueler schuler in _schulerliste)
+			{
+				<p>@schuler.Name</p>
+			}
+		}
 	</div>
 </div>
 
@@ -16,11 +23,18 @@
 
 @code {
 
-	public SchulerUbersicht _xxx = new SchulerUbersicht();
+	List<Schueler> _schulerliste;
 
-	public void GetInfos()
+	protected override void OnInitialized()
 	{
-		_xxx = new SchulerUbersicht();
+		base.OnInitialized();
+		_schulerliste = _schulerLogic.GetSchulerdata();
 	}
+
+	protected override void OnAfterRender(bool firstrender)
+	{
+		_schulerliste = _schulerLogic.GetSchulerdata();
+	}
+
 
 }
