Deine Commit-Nachricht

--- a/AbsenzAPPDBHosting/Views/Shared/Eltern/elternansicht.razor
+++ b/AbsenzAPPDBHosting/Views/Shared/Eltern/elternansicht.razor
@@ -33,7 +33,7 @@
             </div>
         </div>
     </div>
-
+<!-- #region  -->
     <!-- Auflistung der Module -->
     <div class="row my-4">
         <div class="col text-center">
