--- a/AbsenzAPPDBHosting/Views/Shared/RazorPages/Schuleransicht.razor
+++ b/AbsenzAPPDBHosting/Views/Shared/RazorPages/Schuleransicht.razor
@@ -28,12 +28,7 @@
 	protected override void OnInitialized()
 	{
 		base.OnInitialized();
-		_schulerliste = _schulerLogic.GetSchulerdata();
-	}
-
-	protected override void OnAfterRender(bool firstrender)
-	{
-		_schulerliste = _schulerLogic.GetSchulerdata();
+		//_schulerliste = _schulerLogic.GetSchulerdata();
 	}
 
 
