--- a/AbsenzAPPDBHosting/Views/Shared/Lehrer/LehrerAbwesenheitSpeichern.razor
+++ b/AbsenzAPPDBHosting/Views/Shared/Lehrer/LehrerAbwesenheitSpeichern.razor
@@ -1,3 +1,4 @@
+@using AbsenzAPPDBHosting.BusinessLogic2
 @inject LehrerLogic _lehrerLogic;
 
 <h2 class="text-center my-4">Abwesenheit eintragen</h2>
