--- a/AbsenzAPPDBHosting/Views/Shared/Admin/AdminPdfHochladen.razor
+++ b/AbsenzAPPDBHosting/Views/Shared/Admin/AdminPdfHochladen.razor
@@ -1,3 +1,4 @@
+@using AbsenzAPPDBHosting.BusinessLogic2
 @inject AdminLogic _adminLogic;
 
 <h2>PDF Hochladen</h2>
@@ -5,7 +6,7 @@
 <div class="container">
     <div class="row">
         <div class="col text-center">
-            <input type="file" @onchange="HandleFileUpload" />
+            @* <input type="file" @onchange="HandleFileUpload" /> *@
             @* Datei-Upload-Eingabe, die die Razor-Methode "HandleFileUpload" aufruft *@
         </div>
     </div>
@@ -29,7 +30,7 @@
     {
         if (UploadedFile != null)
         {
-            await _adminLogic.UploadPDFAsync(UploadedFile);
+            // await _adminLogic.UploadPDFAsync(UploadedFile);
         }
     }
 }
