--- a/AbsenzAPPDBHosting/Views/Shared/Lehrer/LehrerAlleSchueler.razor
+++ b/AbsenzAPPDBHosting/Views/Shared/Lehrer/LehrerAlleSchueler.razor
@@ -1,6 +1,7 @@
 @using AbsenzAPPDBHosting.BusinessLogic2
+@using AbsenzAPPDBHosting.Models
 @namespace AbsenzAPPDBHosting.Views.Shared.RazorPages
-@inject LehrerLogic _lehrerLogic;
+@inject SchulerLogic _schulerLogic;
 
 <h2 class="text-center my-4">Lehrer: Schülerübersicht</h2>
 
@@ -10,7 +11,8 @@
         <div class="col-md-6">
             <input type="text" placeholder="Filter: Name, Klasse" 
                    class="form-control shadow-sm" 
-                   @oninput="FilterSchueler" />
+                   @* @oninput="FilterSchueler"  *@
+                   />
             @* Eingabefeld für Filter *@
         </div>
     </div>
@@ -25,7 +27,7 @@
                     {
                         <li class="list-group-item d-flex justify-content-between align-items-center">
                             <span class="fw-bold">@schueler.Name</span>
-                            <span class="text-muted">(@schueler.Klasse)</span>
+                            <span class="text-muted">(@schueler.Klassen)</span>
                             <a href="@($"/Lehrer/Status?schuelerId={schueler.Id}")" 
                                class="btn btn-primary btn-sm">
                                 Status bearbeiten
@@ -51,12 +53,12 @@
     protected override void OnInitialized()
     {
         base.OnInitialized();
-        SchuelerListe = _lehrerLogic.GetAllSchueler();
+        SchuelerListe = _schulerLogic.GetAll();
     }
 
-    private void FilterSchueler(ChangeEventArgs e)
-    {
-        Filter = e.Value.ToString();
-        SchuelerListe = _lehrerLogic.FilterSchueler(Filter);
-    }
+    // private void FilterSchueler(ChangeEventArgs e)
+    // {
+    //     Filter = e.Value.ToString();
+    //     SchuelerListe = _lehrerLogic.FilterSchueler(Filter);
+    // }
 }
